Update 6 - Plotting Topics over Time.ipynb

--- a/6 - Plotting Topics over Time.ipynb
+++ b/6 - Plotting Topics over Time.ipynb
@@ -443,7 +443,7 @@
    "source": [
     "Using Plotly to generate ridgeline plot of normalized topic volumes over time.\n",
     "\n",
-    "Borrow heavily from: https://www.python-graph-gallery.com/ridgeline-graph-plotly"
+    "Borrows heavily from: https://www.python-graph-gallery.com/ridgeline-graph-plotly"
    ]
   },
   {
